# fastapi_backend_template

./: .gitignore  Makefile  README.md
backend/srv/events/: .dockerignore  migrate.py  pyproject.toml
backend/srv/events/migrations/: env.py
backend/srv/events/migrations/versions/: a13b381a37b6_init_db.py
backend/srv/events/src/events/: main.py
backend/srv/events/src/events/adapters/: orm.py  repository.py  user_repo.py
backend/srv/events/src/events/config/: config.py
backend/srv/events/src/events/dependencies/: repos.py  session.py  unit_of_work.py  usecases.py  users_usecase.py
backend/srv/events/src/events/domain/: event.py  event_signup.py  exceptions.py  time_range_vo.py
backend/srv/events/src/events/domain/services/: event_overlap_checker.py
backend/srv/events/src/events/domain/users/: users.py
backend/srv/events/src/events/routes/: events.py  users.py
backend/srv/events/src/events/schemas/: events.py  user_types.py  users.py
backend/srv/events/src/events/usecase/: create_event.py  get_event.py  list_user_events.py  signup_to_event.py  unit_of_work.py
backend/srv/events/src/events/usecase/users/: create_user.py
backend/srv/events/tests/: conftest.py
backend/srv/events/tests/e2e/: test_create_event.py  test_create_user.py  test_healthcheck.py
backend/srv/events/tests/integration/: test_orm.py  test_repository.py
backend/srv/events/tests/unit/domain/: test_event.py
backend/srv/events/tests/unit/usecase/: test_create_event.py
backend/srv/events/tests/utils/: pg_container_helper.py
deployment/: Dockerfile
(+29 files in other folders)
