[project]
name = "events"
version = "0.1.0"
description = ""
authors = [
    {name = "alexey_romanyuk",email = "alexey.romanyuk1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "testcontainers (>=4.10.0,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "events", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
faker = "^37.4.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
